syntax = "proto3";
package sec_srv_svc;

import "srv_message_type.proto";

message SrvMsgGetManyByName {
	MessageType message_type = 1;
	int32 security_count = 2;
	repeated string security_name = 3;
}

message SrvMsgGetManyByNameResponse {
	uint32 message_size = 1;
	int32 security_count = 2;

	message RequestResponse {
		message MsgOnSuccess {
			int32 result_code = 1;
			bytes mem = 2;
		}
		message MsgOnFailure {
			int32 result_code = 1;
		}

		oneof MessageResponse {
			MsgOnFailure msg_on_failure = 3;
			MsgOnSuccess msg_on_success = 4;
		}
	}

	repeated RequestResponse request_response = 3;
}
